feat: IPFS support, ability to use i18n with next export

--- a/i18n/translations.sk.json
+++ b/i18n/translations.sk.json
@@ -19,5 +19,5 @@
   "subscribe_to": "prihlásiť sa ku",
   "newsletter_title": "QuestSpace newslettru!",
   "enter_email": "Zadajte emailovú adresu",
-  "copyright": "Copyright © 2021 QuestSpace"
+  "copyright": "Copyright © 2021 QuestSpace. Web hostovaný na "
 }
