--- a/i18n/translations.en.json
+++ b/i18n/translations.en.json
@@ -19,5 +19,5 @@
   "subscribe_to": "subscribe to",
   "newsletter_title": "QuestSpace newsletter!",
   "enter_email": "Enter your email address",
-  "copyright": "Copyright © 2021 QuestSpace"
+  "copyright": "Copyright © 2021 QuestSpace. Website hosted on "
 }
