feat: new membership info

--- a/i18n/translations.en.json
+++ b/i18n/translations.en.json
@@ -19,5 +19,7 @@
   "subscribe_to": "subscribe to",
   "newsletter_title": "QuestSpace newsletter!",
   "enter_email": "Enter your email address",
-  "copyright": "Copyright © 2021 QuestSpace. Website hosted on "
+  "copyright": "Copyright © 2021 QuestSpace. Website hosted on ",
+  "buy_text": "Buy",
+  "with_crypto": "with crypto"
 }
